tests/negative/test_decl_bad_sep.orb
fnc main() {
    c8 a = 'a' ) b = 'b';
}